Updated readme & fixed api files
