# api/db/models.py
@@ -6,7 +6,7 @@ class User(Base):
     id       = Column(Integer, primary_key=True, index=True)
     email    = Column(String,  nullable=False)
     name     = Column(String,  nullable=False)
-    surName  = Column(String,  nullable=False)
+    surname  = Column(String,  nullable=False)
     password = Column(String,  nullable=False)
     isAdmin  = Column(Boolean, nullable=False)
 
